--- a/Not-Just-Guys-(draft)/Not-Just-Guys/options/options.html
+++ b/Not-Just-Guys-(draft)/Not-Just-Guys/options/options.html
@@ -25,7 +25,7 @@
     email if you decide to ignore it.)
   </p>
   <p>
-    Created by Sherry Hakimi of <a href="http://genequality.org">genEquality</a> and Kirstyn Natavio of <a href="http://2q2.com">Quadrant2</a>, with special thanks to Tami Reiss and the
+    Created by Sherry Hakimi of <a href="http://genequality.org">genEquality</a> and Kirstyn Natavio of <a href="https://www.quadrant2.us">Quadrant 2</a>, with special thanks to Tami Reiss and the
     <a href="http://defmethod.com">Def Method</a> team.
   </p>
   <p>
